--- a/client/main.css
+++ b/client/main.css
@@ -1,4 +1,4 @@
-body {
-  padding: 10px;
-  font-family: sans-serif;
-}
+/* client/main.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
